Fix cancel rescan button alignment (#2207)

--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -359,6 +359,8 @@
 .rescan-progress-area {
   color: var(--disabled-color);
   font-size: 13px;
+  display: flex;
+  align-items: center;  
 }
 
 .rescan-progress-percent {
@@ -371,8 +373,10 @@
 }
 
 .rescan-progress-indicator {
-  margin: -14px 0px 10px -20px;
-  width: @sidebar-width;
+  width: 100%;
+  position: absolute;
+  top:0;
+  left:0;
 
   .linear-progress.small {
     border-radius: 0px;
@@ -387,7 +391,7 @@
 
 .rescan-button-area {
   padding-top: 2px;
-  padding-right: 10px;
+  padding-right: 5px;
   float: left;
 }
 
@@ -426,8 +430,7 @@
 }
 
 .rescan-cancel-button-area {
-  padding-top: 2px;
-  float: right;
+  margin: 0 -12px 0 auto;
 }
 
 .gettickets-cancel-button,
